// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render pagination 1`] = `
<div
  className="a b c"
>
  <ul
    aria-describedby={null}
    className="a b c d e f g h i j k l m n o"
    role="navigation"
  >
    <li
      className="m p q r s n"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-icon cf-icon--caret-left"
          role={undefined}
        />
      </a>
    </li>
    <li
      className="m p ad ae s af ag"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        1
      </a>
    </li>
    <li
      className="m p ah ai aj"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab aj ac"
        href="#"
        onClick={[Function]}
      >
        2
      </a>
    </li>
    <li
      className="m p ah ai aj"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab aj ac"
        href="#"
        onClick={[Function]}
      >
        3
      </a>
    </li>
    <li
      className="m p ah ai aj"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab aj ac"
        href="#"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="m p ah ai aj"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab aj ac"
        href="#"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="m p ad ae aj n"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab aj ac"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-icon cf-icon--caret-right"
          role={undefined}
        />
      </a>
    </li>
  </ul>
</div>
`;

exports[`should render pagination 2`] = `
"
.a:after {
  content: \\"\\"
}

.b:after {
  display: table
}

.c:after {
  clear: both
}

.d {
  list-style: none
}

.e {
  margin-top: 0px
}

.f {
  margin-left: 0px
}

.g {
  margin-right: 0px
}

.h {
  margin-bottom: 0px
}

.i {
  padding-top: 0px
}

.j {
  padding-left: 0px
}

.k {
  padding-right: 0px
}

.l {
  padding-bottom: 0px
}

.m {
  float: left
}

.n {
  border-radius: 3px
}

.o {
  box-shadow: none
}

.p {
  position: relative
}

.q {
  background-color: #ededed
}

.r {
  color: #666
}

.s {
  cursor: default
}

.t {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none
}

.u {
  display: block
}

.v {
  padding-top: .5em
}

.w {
  padding-bottom: .5em
}

.x {
  padding-left: 1em
}

.y {
  padding-right: 1em
}

.z {
  text-decoration: none
}

.ab {
  color: inherit
}

.ac:focus {
  z-index: 1
}

.ad {
  background-color: #408BC9
}

.ae {
  color: #fff
}

.af {
  border-color: #62a1d8
}

.ag {
  z-index: 1
}

.ah {
  background-color: #fff
}

.ai {
  color: #408BC9
}

.aj {
  cursor: pointer
}
"
`;

exports[`should render pagination loading 1`] = `
<div
  className="a b c"
>
  <ul
    aria-describedby={null}
    className="a b c d e f g h i j k l m n o"
    role="navigation"
  >
    <li
      className="m p q r s n"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-icon cf-icon--caret-left"
          role={undefined}
        />
      </a>
    </li>
    <li
      className="m p ad ae s af ag"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-icon cf-icon--loading"
          role={undefined}
        />
      </a>
    </li>
    <li
      className="m p ah ai aj"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab aj ac"
        href="#"
        onClick={[Function]}
      >
        2
      </a>
    </li>
    <li
      className="m p ah ai aj"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab aj ac"
        href="#"
        onClick={[Function]}
      >
        3
      </a>
    </li>
    <li
      className="m p ah ai aj"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab aj ac"
        href="#"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="m p ah ai aj"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab aj ac"
        href="#"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="m p ad ae aj n"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab aj ac"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-icon cf-icon--caret-right"
          role={undefined}
        />
      </a>
    </li>
  </ul>
</div>
`;

exports[`should render pagination loading 2`] = `
"
.a:after {
  content: \\"\\"
}

.b:after {
  display: table
}

.c:after {
  clear: both
}

.d {
  list-style: none
}

.e {
  margin-top: 0px
}

.f {
  margin-left: 0px
}

.g {
  margin-right: 0px
}

.h {
  margin-bottom: 0px
}

.i {
  padding-top: 0px
}

.j {
  padding-left: 0px
}

.k {
  padding-right: 0px
}

.l {
  padding-bottom: 0px
}

.m {
  float: left
}

.n {
  border-radius: 3px
}

.o {
  box-shadow: none
}

.p {
  position: relative
}

.q {
  background-color: #ededed
}

.r {
  color: #666
}

.s {
  cursor: default
}

.t {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none
}

.u {
  display: block
}

.v {
  padding-top: .5em
}

.w {
  padding-bottom: .5em
}

.x {
  padding-left: 1em
}

.y {
  padding-right: 1em
}

.z {
  text-decoration: none
}

.ab {
  color: inherit
}

.ac:focus {
  z-index: 1
}

.ad {
  background-color: #408BC9
}

.ae {
  color: #fff
}

.af {
  border-color: #62a1d8
}

.ag {
  z-index: 1
}

.ah {
  background-color: #fff
}

.ai {
  color: #408BC9
}

.aj {
  cursor: pointer
}
"
`;

exports[`should render pagination with an infoFormatter 1`] = `
<div
  className="a b c"
>
  <ul
    aria-describedby={null}
    className="a b c d e f g h i j k l m n o"
    role="navigation"
  >
    <li
      className="m p q r s n"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-icon cf-icon--caret-left"
          role={undefined}
        />
      </a>
    </li>
    <li
      className="m p ad ae s"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        1
      </a>
    </li>
    <li
      className="m p q r af ag ah"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab af ac"
        href="#"
        onClick={[Function]}
      >
        2
      </a>
    </li>
    <li
      className="m p ad ae s"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        3
      </a>
    </li>
    <li
      className="m p ad ae s"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="m p ad ae s"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="m p q r s n"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-icon cf-icon--caret-right"
          role={undefined}
        />
      </a>
    </li>
  </ul>
</div>
`;

exports[`should render pagination with an infoFormatter 2`] = `
"
.a:after {
  content: \\"\\"
}

.b:after {
  display: table
}

.c:after {
  clear: both
}

.d {
  list-style: none
}

.e {
  margin-top: 0px
}

.f {
  margin-left: 0px
}

.g {
  margin-right: 0px
}

.h {
  margin-bottom: 0px
}

.i {
  padding-top: 0px
}

.j {
  padding-left: 0px
}

.k {
  padding-right: 0px
}

.l {
  padding-bottom: 0px
}

.m {
  float: left
}

.n {
  border-radius: 3px
}

.o {
  box-shadow: none
}

.p {
  position: relative
}

.q {
  background-color: #408BC9
}

.r {
  color: #fff
}

.s {
  cursor: pointer
}

.t {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none
}

.u {
  display: block
}

.v {
  padding-top: .5em
}

.w {
  padding-bottom: .5em
}

.x {
  padding-left: 1em
}

.y {
  padding-right: 1em
}

.z {
  text-decoration: none
}

.ab {
  color: inherit
}

.ac:focus {
  z-index: 1
}

.ad {
  background-color: #fff
}

.ae {
  color: #408BC9
}

.af {
  cursor: default
}

.ag {
  border-color: #62a1d8
}

.ah {
  z-index: 1
}
"
`;

exports[`should render pagination with the last page active 1`] = `
<div
  className="a b c"
>
  <ul
    aria-describedby={null}
    className="a b c d e f g h i j k l m n o"
    role="navigation"
  >
    <li
      className="m p q r s n"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-icon cf-icon--caret-left"
          role={undefined}
        />
      </a>
    </li>
    <li
      className="m p ad ae s"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        1
      </a>
    </li>
    <li
      className="m p ad ae s"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        2
      </a>
    </li>
    <li
      className="m p ad ae s"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        3
      </a>
    </li>
    <li
      className="m p ad ae s"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="m p q r af ag ah"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab af ac"
        href="#"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="m p ai aj af n"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab af ac"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-icon cf-icon--caret-right"
          role={undefined}
        />
      </a>
    </li>
  </ul>
</div>
`;

exports[`should render pagination with the last page active 2`] = `
"
.a:after {
  content: \\"\\"
}

.b:after {
  display: table
}

.c:after {
  clear: both
}

.d {
  list-style: none
}

.e {
  margin-top: 0px
}

.f {
  margin-left: 0px
}

.g {
  margin-right: 0px
}

.h {
  margin-bottom: 0px
}

.i {
  padding-top: 0px
}

.j {
  padding-left: 0px
}

.k {
  padding-right: 0px
}

.l {
  padding-bottom: 0px
}

.m {
  float: left
}

.n {
  border-radius: 3px
}

.o {
  box-shadow: none
}

.p {
  position: relative
}

.q {
  background-color: #408BC9
}

.r {
  color: #fff
}

.s {
  cursor: pointer
}

.t {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none
}

.u {
  display: block
}

.v {
  padding-top: .5em
}

.w {
  padding-bottom: .5em
}

.x {
  padding-left: 1em
}

.y {
  padding-right: 1em
}

.z {
  text-decoration: none
}

.ab {
  color: inherit
}

.ac:focus {
  z-index: 1
}

.ad {
  background-color: #fff
}

.ae {
  color: #408BC9
}

.af {
  cursor: default
}

.ag {
  border-color: #62a1d8
}

.ah {
  z-index: 1
}

.ai {
  background-color: #ededed
}

.aj {
  color: #666
}
"
`;

exports[`should render with collapsed items 1`] = `
<div
  className="a b c"
>
  <ul
    aria-describedby={null}
    className="a b c d e f g h i j k l m n o"
    role="navigation"
  >
    <li
      className="m p q r s n"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-icon cf-icon--caret-left"
          role={undefined}
        />
      </a>
    </li>
    <li
      className="m p ad ae s"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        1
      </a>
    </li>
    <li
      className="m p ad ae s"
      role="presentation"
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        <span>
          …
        </span>
      </a>
    </li>
    <li
      className="m p ad ae s"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="m p ad ae s"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="m p q r af ag ah"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab af ac"
        href="#"
        onClick={[Function]}
      >
        6
      </a>
    </li>
    <li
      className="m p ad ae s"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        7
      </a>
    </li>
    <li
      className="m p ad ae s"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        8
      </a>
    </li>
    <li
      className="m p ad ae s"
      role="presentation"
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        <span>
          …
        </span>
      </a>
    </li>
    <li
      className="m p ad ae s"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        20
      </a>
    </li>
    <li
      className="m p q r s n"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-icon cf-icon--caret-right"
          role={undefined}
        />
      </a>
    </li>
  </ul>
</div>
`;

exports[`should render with collapsed items 2`] = `
"
.a:after {
  content: \\"\\"
}

.b:after {
  display: table
}

.c:after {
  clear: both
}

.d {
  list-style: none
}

.e {
  margin-top: 0px
}

.f {
  margin-left: 0px
}

.g {
  margin-right: 0px
}

.h {
  margin-bottom: 0px
}

.i {
  padding-top: 0px
}

.j {
  padding-left: 0px
}

.k {
  padding-right: 0px
}

.l {
  padding-bottom: 0px
}

.m {
  float: left
}

.n {
  border-radius: 3px
}

.o {
  box-shadow: none
}

.p {
  position: relative
}

.q {
  background-color: #408BC9
}

.r {
  color: #fff
}

.s {
  cursor: pointer
}

.t {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none
}

.u {
  display: block
}

.v {
  padding-top: .5em
}

.w {
  padding-bottom: .5em
}

.x {
  padding-left: 1em
}

.y {
  padding-right: 1em
}

.z {
  text-decoration: none
}

.ab {
  color: inherit
}

.ac:focus {
  z-index: 1
}

.ad {
  background-color: #fff
}

.ae {
  color: #408BC9
}

.af {
  cursor: default
}

.ag {
  border-color: #62a1d8
}

.ah {
  z-index: 1
}
"
`;
